--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@ html {
 }
 
 body {
+    box-sizing: border-box;
     margin: 1.5%; /*Sets margin in body, allowing greater setting to be applied locally*/
-    height: 96.5%;
-    overflow: hidden;
+    height: 96%;
+    max-height: 100%;
+    width: 97%;
     border-radius: 25px;
     background-color: rgba(255,255,255,0.75); /*white with 1/4 transparency, overlaid by header*/
+    display: table;
 }
 
 .Header {
@@ -51,18 +54,19 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     height: inherit;
+    max-height: 705px;
 }
 
 .table {
     overflow-y: scroll;
-    max-height: 205px;
-    height: 65%;
+    max-height: 465px;
+    height: 60%;
     display: block;
 }
 
 #items {
     border-collapse: collapse;
-    width: 100%;
+    width: 100%;    
 }
 
 #items td, #items th {
@@ -83,4 +87,27 @@ body {
 
 #items tr:hover {
     background-color: rgba(172,215,215,0.5);
+}
+
+.Template_Body {
+    box-sizing: border-box;
+    padding: 20px;
+    margin-top: -20px;
+    font-family: monospace;
+    margin: 24px;
+    max-height: 80%;
+    display: table-row;
+}
+
+.Template_Body h1 {
+    margin-top: -20px;
+    margin-bottom: -10px;
+}
+
+.ImageBanner {
+    object-fit: cover; 
+    overflow-x: hidden;
+    margin-left: -25px; 
+    margin-bottom: 10px;
+    width: calc(100% + 50px)
 }
