--- a/style.css
+++ b/style.css
@@ -111,3 +111,50 @@ body {
     margin-bottom: 10px;
     width: calc(100% + 50px)
 }
+
+#index_display {
+    width: 100%;
+}
+
+#index_display td {
+    background-color: red;
+    height: 175px;
+    width: 50%;
+}
+
+#index_display a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    opacity: 0;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: 0.5s ease;
+    font-family: monospace;
+}
+
+#index_display a:hover {
+    background-color: white;
+    opacity: 0.75;
+    transition: 0.5s ease;
+}
+
+#index_display div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#index_display h1, h2 {
+    margin: 1px;
+    color: black;
+    text-decoration-line: none;
+}
+
+#index_display th {
+    display: none;
+    height: 0px;
+    width: 50%;
+}
