--- a/style.css
+++ b/style.css
@@ -117,9 +117,11 @@ body {
 }
 
 #index_display td {
-    background-color: red;
     height: 175px;
     width: 50%;
+    background-size: cover, contain;
+    background-repeat: no-repeat, no-repeat;
+    background-position: center, center;
 }
 
 #index_display a {
